--- a/html-and-css-prototype/index.html
+++ b/html-and-css-prototype/index.html
@@ -11,8 +11,13 @@
       <img src="https://s3.amazonaws.com/f.cl.ly/items/2z3C3Z0L2Q0R282p1V0z/Image%202014-12-19%20at%2010.07.09%20AM.png" width="303" />
     </div>
 
-    <!-- Your code goes here -->
-
+    <div class="wrapper">
+  <div class="box header">Header</div>
+  <div class="box sidebar">Sidebar</div>
+  <div class="box content">Content
+    <br /> More content than we had before so this column is now quite tall.</div>
+  <div class="box footer">Footer</div>
+</div><!-- Your code goes here -->
 
 
   </body>
